# fast-talk

./: CMakeLists.txt  FST.h  FST_array.c  FST_array.h  FST_class.c  FST_class.h  FST_env.c  FST_env.h  FST_interpreter.c  FST_interpreter.h  FST_msg.c  FST_msg.h  FST_object.c  FST_object.h  FST_stdlib.c  FST_stdlib.h  FST_str.c  FST_str.h  FST_val.c  FST_val.h  FastTalk.h  LICENSE  README.md  main.c
NativeObjects/: Ft_IntObj.c  Ft_IntObj.h
VM/: FST_array.c  FST_array.h  FST_class.c  FST_class.h  FST_env.c  FST_env.h  FST_interpreter.c  FST_interpreter.h  FST_msg.c  FST_msg.h  FST_object.c  FST_object.h  FST_stdlib.c  FST_stdlib.h  FST_str.c  FST_str.h  Ft_MemPool.c  Ft_MemPool.h  Ft_array.c  Ft_array.h  Ft_class.c  Ft_class.h  Ft_env.c  Ft_env.h  Ft_interpreter.c  Ft_interpreter.h  Ft_msg.c  Ft_msg.h  Ft_object.c  Ft_object.h  Ft_stdlib.c  Ft_stdlib.h  Ft_str.c  Ft_str.h
tinycthread/: tinycthread.c  tinycthread.h
